--- a/public/stylesheet/watch.css
+++ b/public/stylesheet/watch.css
@@ -447,3 +447,7 @@ textarea, input[type="text"] {
     justify-content: center; 
     color: #92BDF9;
 }
+/* 
+@media screen and (max-width: ) {
+    
+} */
