--- a/public/stylesheet/view-cell-reports.css
+++ b/public/stylesheet/view-cell-reports.css
@@ -425,3 +425,63 @@ input[type="number"] {
     -webkit-animation: rotate-center 0.6s linear both infinite;
     animation: rotate-center 0.6s linear both infinite;
 }
+
+.notvisible {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.loader {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #f9f9f9;
+    z-index: 11;
+    transition: opacity 0.75s, visibility 0.75s;
+}
+
+.loader::before {
+    content: "";
+    width: 90px;
+    height: 90px;
+    border: 5px solid var(--darker-blue);
+    border-top-color: #f9f9f9;
+    border-radius: 50%;
+    animation: spin 0.55s linear infinite;
+}
+
+.loader::after {
+    content: "";
+    position: absolute;
+    width: 65px;
+    height: 65px;
+    border: 5px solid var(--secondary-color);
+    border-bottom-color: #f9f9f9;
+    border-radius: 50%;
+    animation: opposite-spin 0.75s linear infinite;
+}
+
+.inner-loader {
+    content: "";
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    border: 5px solid var(--darker-blue);
+    border-radius: 50%;
+    background: var(--darker-blue);
+    -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
+    animation: heartbeat 1.5s ease-in-out infinite both;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+@keyframes opposite-spin {
+    0% { transform: rotate(360deg); }
+    100% { transform: rotate(0deg); }
+}
