--- a/public/stylesheet/defaultdashboard.css
+++ b/public/stylesheet/defaultdashboard.css
@@ -78,9 +78,9 @@ body {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    padding: 20px 5px 0px 20px;
+    padding: 20px 5px 0px 10px;
     text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'system-ui';
 }
 
 .title-users-name {
@@ -125,13 +125,12 @@ body {
     height: 40px;
     box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.082);
     align-items: center;
-    justify-content: space-evenly;
     transition: background 0.1s ease-in-out;
     font-weight: bold;
     font-size: 1.05rem;
     cursor: pointer;
     text-wrap: nowrap;
-    padding: 0px 60px;
+    padding: 0px 80px;
     border-radius: 15px;
 }
 
@@ -150,9 +149,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-    text-align: left;
-    font-size: 1.2rem;
-    font-weight: bolder;
+    font-size: 1.15rem;
     color: var(--primary-text-color);
     text-shadow: 2px 1px 5px rgba(0, 0, 0, 0.089);
 }
@@ -160,13 +157,24 @@ body {
 .dashboard-links { /* ul tag holding all the list items (.navbar-list-items) */
     line-height: 40px;
     list-style: none;
+    font-weight: bold;
     width: 100%;
 }
 
 .dashboard-items { /* individual li tags with their shared class-name */
     transition: all 0.1s ease-in;
     cursor: pointer;
+    width: 100%;
+    display: flex;
+    text-align: left;
+    justify-content: space-between;
+    align-items: center;
     padding: 5px 0px 0px 20px;
+}
+
+.dashboard-items > p {
+    margin-left: 10px;
+    min-width: 190px;
 }
 
 .dashboard-items:hover {
@@ -190,7 +198,6 @@ body {
 .fa-duotone.fa-solid.fa-trophy,
 .fa-duotone.fa-solid.fa-calendar-days,
 .fa-solid.fa-paper-plane-top {
-    margin-right: 10px;
     color: #030c3ddc;
 }
 
