--- a/public/stylesheet/defaultdashboard.css
+++ b/public/stylesheet/defaultdashboard.css
@@ -161,7 +161,7 @@ body {
 }
 
 .dashboard-items { /* individual li tags with their shared class-name */
-    transition: all 0.1s ease-in;
+    transition: color 0.1s ease-in, background 0.1s ease-in, transform 0.1s ease-in-out;
     cursor: pointer;
     width: 100%;
     display: flex;
@@ -179,6 +179,7 @@ body {
 
 .dashboard-items:hover {
     color: #04125c;
+    transform: scale(1.03);
     background: var(--light-blue);
 }
 
@@ -369,15 +370,15 @@ body {
 .prompt-popup {
     width: 100%;  
     height: 100%;
-    top: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
+    top: 50%;
     bottom: 50%;    
     z-index: 20;
+    transform: translate(0%, -50%) ;
     background: #3d3d3da1;
     position: absolute;
-    transform: translate(0%, -50%) ;
     animation: fade .2s ease-in;
     }
 
