--- a/public/stylesheet/view-cell-reports.css
+++ b/public/stylesheet/view-cell-reports.css
@@ -90,10 +90,6 @@ input[type="number"] {
     letter-spacing: 0rem;
 }
 
-.hidden {
-    display: none;
-}
-
 .table-padding {
     padding: 0px 20px 0px 30px;
 }
@@ -141,18 +137,54 @@ input[type="number"] {
     max-width: 80px;
 }
 
-.users-table th:nth-child(2),
-.users-table td:nth-child(2) {
-    width: 180px;
-    max-width: 200px;
+.users-table th:last-child,
+.users-table td:last-child {
+    width: 120px;
+    max-width: 150px;
 }
 
-.users-table th:nth-child(3),
-.users-table td:nth-child(3) {
-    width: 135px;
-    max-width: 170px;
+.report-button {
+    height: 30px;
+    background: var(--secondary-color);
+    width: 90px;
+    padding: 5px;
+    border-radius: 5px;
+    display: block;
+    align-content: center;
 }
 
+.report-button > button {
+    background: none;
+    border: none;
+    width: 100%;
+    height: 100%;
+    color: #ffffff;
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    position: relative;
+    justify-content: center;
+    transition: text 0.5s ease-in;
+}
+
+.report-button > button::after {
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 18px;
+    height: 1px;
+    width: 100%;
+    background: #ffffff;
+    transform: scaleX(0);
+    transition: 0.2s ease-in-out;
+}
+
+.report-button > button:hover::after {
+    transform: scaleX(1);
+}
+
+
+/* 
 .users-table th:nth-child(5),
 .users-table td:nth-child(5) {
     width: 120px;
@@ -170,7 +202,7 @@ input[type="number"] {
     border-right: none;
     width: 120px;
     max-width: 150px;
-}
+} */
 
 .users-table td {
     /* text-align: left; */
@@ -217,8 +249,8 @@ input[type="number"] {
 }
 
 .table-container::-webkit-scrollbar-track {
-    background-color: #f0f0f0; /* Background color for the scrollbar track */
-    border-radius: 10px; /* Rounded corners for the scrollbar track */
+    background-color: #f0f0f0; 
+    border-radius: 10px;
 }
 
 .dashboard-footer {
@@ -366,13 +398,15 @@ input[type="number"] {
     background: #73a6e0;
 }
 
+.report-button:active,
 .pagination button:active {
-    transform: translateY(5px);
+    transform: translateY(2px);
     background: #3a86dd;
 }
 
 .skeleton {
     background-color: #ffffff;
+    opacity: .7;
     display: flex;
     align-items: center;
     width: 1062px;
@@ -399,10 +433,272 @@ input[type="number"] {
         transparent 100%
     );
     background-size: 200% 100%;
-    animation: skeleton-loading 1s linear infinite;
+    animation: skeleton-loading 1s linear reverse infinite;
     border-radius: 4px;
 }
 
 .hidden {
     display: none;
+    opacity: 0;
+    transform: translateY(-10px);
 }
+
+.cancel-popup {
+    display: flex;
+    height: 20px;
+    width:  20px;
+    border-radius: 50%;
+    position: relative;
+    align-items: center;
+    transform: rotate(45deg);
+    cursor: pointer;
+    justify-content: center;
+}
+
+.cancel-popup::before {
+    content: '';
+    position: absolute;
+    border: 1px solid #b4b4b4;
+    border-radius: 10px;
+    width: 10px;
+}
+.cancel-popup::after {
+    content: '';
+    position: absolute;
+    border: 1px solid #b4b4b4;
+    border-radius: 10px;
+    height: 10px;
+}
+.cancel-popup:hover {
+    background: #d3d3d39f;
+}
+
+.reports-parent {
+    width: 100%;  
+    height: 100%;  
+    align-content: center;
+    justify-content: center;
+    top: 50%;
+    bottom: 50%;    
+    z-index: 20;
+    background: #3d3d3da1;
+    position: absolute;
+    animation: fade 150ms ease-in;
+    pointer-events: none;
+    transform: translate(0%, -50%);
+}
+
+
+.reports-wrapper {
+    animation: fade 150ms ease-in;
+    width: 700px;
+    height: 450px;
+    background-color:  #f9f9f9;
+    border-radius: 10px;
+    display: block;    
+    position: absolute;    
+    pointer-events: auto;
+    top: 50%;
+    bottom: 50%; 
+    transform: translate(50%, -50%);
+}
+
+.skeleton-text {
+    background-color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+    height: 1.7rem;
+    width: 150px;
+    border-radius: 50px;
+}
+
+.skeleton-text::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    transform: translate(-50%, -50%);
+    background: linear-gradient(
+        90deg,
+        transparent 0%,
+        #e0e0e0 50%,
+        transparent 100%
+    );
+    background-size: 200% 100%;
+    animation: skeleton-loading 1.5s linear reverse infinite;
+    border-radius: 4px;
+}
+.report-id {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    align-content: flex-start;
+    justify-content: space-between;
+    font-family: system-ui;
+    font-size: 1.7rem;
+    font-weight: 700;
+    padding: 20px 20px 0px 20px;
+    text-align: left;
+}
+
+.reports-container {
+    display: block;
+    align-items: center;
+    height: 100%;
+    /* overflow-x: auto; */
+    font-family: system-ui;
+    padding: 20px 20px;
+    width: 100%;
+}
+
+.reports-skeleton {
+    background-color: #ffffff;
+    opacity: .7;
+    display: flex;
+    align-items: center;
+    width: 650px;
+    justify-content: center;
+    position: relative;
+    padding: 0px 5px;
+    height: 50px;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.reports-skeleton::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 200%;
+    height: 20px;
+    transform: translate(-50%, -50%);
+    background: linear-gradient(
+        90deg,
+        transparent 0%,
+        #e0e0e0 50%,
+        transparent 100%
+    );
+    background-size: 200% 100%;
+    animation: skeleton-loading 1.5s linear infinite;
+    border-radius: 4px;
+}
+
+.reports-table-parent {
+    max-height: 320px;
+    width: 100%;
+    /* min-height: 200px; */
+    height: min-content;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    border: 1px solid var(--secondary-color);
+    border-radius: 10px;    
+    
+}
+.reports-table-parent::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    padding: 10px;
+}
+    
+.reports-table-parent::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+    margin: 5px;
+    width: 2px;
+    transition: background-color 0.3s ease;
+}
+
+.reports-table-parent::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+.reports-table-parent::-webkit-scrollbar-track {
+    background-color: #f0f0f0;
+    border-radius: 10px;
+}
+
+.reports-table-parent > table {
+    background-color: #ffff;
+    table-layout: fixed;
+    width: 100%;
+    height: 100%;
+    border-collapse: collapse;
+}
+
+.reports-table-parent > table td,
+.reports-table-parent > table th {
+    overflow: hidden;
+    background: #ffffff;
+    white-space: nowrap; 
+    text-transform: capitalize;
+    padding: 12px;
+}
+
+.reports-table-parent > table > thead {
+    background: #ffffff;
+    box-shadow: 3px 1px 5px 2px rgba(0, 0, 0, 0.062);
+    font-weight: bold;
+    position: sticky; 
+    top: 0;
+    text-wrap: wrap;
+    z-index: 10;
+}
+
+/* .reports-table-parent > table tbody {
+} */
+
+
+.report-table-subtable {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: left;
+}
+  
+.report-table-subtable > thead {
+    box-shadow: none;
+}
+
+
+.grid-layout {
+    display: grid;
+    padding: 0px 40px;
+}
+.report-table-subtable > td:nth-child(even) {
+    background: #f9f9f9;
+}
+
+.fa-solid.fa-caret-down,
+.fa-solid.fa-caret-up {
+    margin-left: 5px;
+    cursor: pointer;
+    color: rgba(2, 2, 2, 0.664);
+}
+
+.report-table-subtable-row {
+    display: none;
+    opacity: 0;
+    transform: translateY(-10px);
+}
+
+.report-table-subtable-wrapper {
+    overflow: hidden; 
+    transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
+}
+
+.report-table-subtable-row:not(.hidden) {
+    opacity: 1;
+    display: table-row;
+    transition: opacity 150ms ease-in-out, display 150ms ease-in-out;
+}
+
+.report-table-subtable-row:not(.hidden) .report-table-subtable-wrapper {
+    transform: translateY(0);
+}
+
+/*  */
