--- a/public/stylesheet/overview.css
+++ b/public/stylesheet/overview.css
@@ -7,8 +7,8 @@
     --secondary-text-color: #333333; 
     --light-text-color: #5A5A5A;  
     --darker-blue: #04125c; 
+    --default-padding: 0px 10px;
 }
-
 .form-container {
     display: flex;
     padding: 20px 60px;
@@ -71,6 +71,7 @@ input[type="number"]::-webkit-inner-spin-button {
 input[type="number"] {
     appearance: none; 
 }
+
 
 .form-group select {
     display: block;
@@ -140,4 +141,375 @@ input[type="number"] {
     background: var(--darker-blue);
     -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
     animation: heartbeat 1.5s ease-in-out infinite both;
+}
+
+.empty-div {
+    height: 25%;
+}
+
+.iframe-styles-reset{
+    border: none;
+    width: 100%;
+    height: 100%;
+}
+
+.default-chart-width {
+    min-width: 300px;
+    border-radius: 10px;
+    width: 100%;
+    position: relative;
+    box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
+    height: 100%;
+}
+
+
+.number-chart{
+    display: flex;
+    min-height: 150px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    /* flex: 1; */
+}
+
+.number-chart .number-chart-title {
+    font-size: 1.1rem;
+    font-weight: bold;
+    opacity: 0.85;
+    letter-spacing: 0.2px;
+    text-transform: uppercase;
+}
+
+.number-chart .number-data-chart-subtitle{
+    opacity: 0;
+    transition: opacity .5s ease;
+}
+
+.number-chart:hover .number-data-chart-subtitle {
+    opacity: 0.8;
+}
+
+.number-chart .number-data-chart-item{
+    font-size: 1.5rem;
+    font-weight: 550;
+    letter-spacing: 0.5px;
+    margin-bottom: 15px;
+}
+
+.absolute-tooltip {
+    opacity: 0;
+    position: absolute;
+    pointer-events: none;
+    left: 50%;
+    bottom: 105%;
+    transform: translateX(-50%);
+    transition: opacity 0.1s ease-in;
+}
+
+.default-chart-width:hover .absolute-tooltip,
+.container:hover .absolute-tooltip {
+    opacity: 1;
+}
+
+.charts-title {
+    width: 280px;
+    height: min-content;
+    /* max-height: 80px; */
+    font-family: sans-serif;
+    padding: 5px;
+    color: #FFFF;
+    background: #000000d0;
+    border-radius: 10px;
+    box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+
+.charts-title::after {
+    content: '';
+    transform: translateX(-50%);
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 5px solid #000000d0;
+}
+
+.number-chart span{
+    display: block;
+    width: 100%;
+    padding: 0px 0px 0px 35px;
+    text-align: left;
+}
+
+.graph-chart iframe {
+    background: var(--secondary-color);
+}
+
+.reportsChart .reports-table td,
+.reportsChart .reports-table th{
+    padding: 12px;
+    color: #656b7a;
+    font-size: small;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.reportsChart .reports-table td{
+    font-weight: bold;
+    font-size: 1rem;
+}
+
+.reportsChart .reports-chart-container {
+    background: #ffffff;
+}
+
+.table-wrapper {
+    width: 100%;
+    overflow: auto;
+}
+
+.table-wrapper::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+    padding: 5px;
+}
+
+/* .table-container::-webkit-scrollbar-button {
+} */
+
+.table-wrapper::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+    margin: 5px;
+    width: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.table-wrapper::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+.table-wrapper::-webkit-scrollbar-track {
+    background-color: #f0f0f0;
+    border-radius: 10px;
+}
+
+
+.reports-chart-container > .caption{
+    padding: 12px;
+    width: 100%;
+    text-align: left;
+    font-size: 1.1rem;
+    color: var(--primary-text-color);
+    font-weight: bold;
+    position: relative;
+    border-radius: 10px;
+    background-color: #ffffff;
+    z-index: 2;
+}
+
+.reportsChart .reports-table {
+    width: 100%;
+    text-align: left;
+    border-collapse: collapse;
+}
+
+
+
+.reportsChart .reports-table thead{
+    background: #f5f9fc;
+}
+
+.grid-chart {
+    display: grid;
+    grid-template-columns: repeat(auto, 1fr);
+    grid-auto-rows: auto;
+    column-gap: 20px;
+    row-gap: 30px;
+    padding: 5px 40px;
+    align-items: start;
+    justify-items: center;
+}
+
+.grid-span-col-2-3 {
+    grid-column: span 1;  
+    height: 350px;
+}
+
+.grid-row-2-col-1 {
+    grid-column: span 1;
+    height: 300px;
+}
+
+.grid-row-4-column-2-span-2,
+.grid-row-4-column-span-2 {
+    grid-column: span 1;
+}
+
+@media (min-width: 768px) {
+    .grid-chart {
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Multi-column layout for larger screens */
+    }
+
+    .grid-span-col-2-3 {
+        width: calc(145% / 2);
+        justify-self: flex-end;
+        grid-column: 2 / span 2;
+        grid-row: 2 / span 2;
+    }
+    .grid-row-2-col-1 {
+        grid-column: 1 / span 2;
+        width: calc(150% / 2);
+        justify-self: flex-start;
+        align-self: center;
+        grid-row: 2 / span 2;
+    }
+
+    .grid-row-4-column-span-2 {
+        width: calc(150% / 2);
+        grid-row: 4 / span 2;
+        background: #051770;
+        align-self: center;
+        justify-self: flex-start;
+        grid-column: 1 / span 2;
+    }
+
+    .grid-row-4-column-2-span-2 {
+        grid-row: 4 / span 2;
+        justify-self: flex-end;
+        width: calc(145% / 2);
+        background: #fefefe;
+        grid-column: 2 / span 2;
+    }
+
+
+    .reportsChart .reports-table td,
+    .reportsChart .reports-table th{
+        text-wrap: nowrap;
+    }
+
+    .reportsChart{
+        min-width: 300px;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
+    }
+}
+
+
+.dark-colour-style {
+    background: #18264d;
+    color: #ffff;
+}
+
+.default-chart-width:nth-child(2) {
+    background: #008080;
+    color: #ffff;
+}
+
+.default-chart-width:nth-child(3) {
+    background: #FFA500;
+    color: #ffff;
+}
+
+.dark-border-type {
+    position: relative;
+    z-index: 1;
+}
+
+.dark-border-type::before {
+    content: '';
+    position: absolute;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    border: 10px solid #FFA500;
+    border-radius: 10px;
+}
+
+.container {
+    position: relative;
+    overflow: hidden;
+    background-color: #FFA500;
+    border-radius: 10px;
+}
+
+.container .slides-row {
+    display: flex;
+    height: 90%;
+}
+
+.container .slides-row .slide {
+    min-width: 100%;
+}
+
+
+.container span.next,
+.container span.prev {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 12px 16px;
+    color: #7e7e7e;
+    font-weight: bold;
+    font-size: 22px;
+    transition: 0.5s;
+    border-radius: 3px;
+    user-select: none;
+    -webkit-user-select: none;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.container span.next{
+    right: 10px;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+.container span.prev{
+    left: 10px;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+.container span.next:hover,
+.container span.prev:hover {
+    background: #ddd;
+    opacity: 0.8;
+    color: #222;
+}
+
+.container .dots {
+    position: absolute;
+    top: 5px;
+    z-index: 3;
+    right: 10px;
+    transform: translateX(-50%);
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+.container:hover > .dots,
+.container:hover > span.next,
+.container:hover > span.prev{
+    opacity: 0.5;
+}
+
+.container .dots .dot {
+    height: 10px;
+    width: 10px;
+    margin: 0 1px;
+    border: 2px solid #e7e7e7bd;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.container .dots .active {
+    background-color: #0f0f0fda;
 }
