--- a/public/stylesheet/view-users.css
+++ b/public/stylesheet/view-users.css
@@ -208,8 +208,8 @@ input[type="number"] {
 }
 
 .table-container::-webkit-scrollbar-track {
-    background-color: #f0f0f0; /* Background color for the scrollbar track */
-    border-radius: 10px; /* Rounded corners for the scrollbar track */
+    background-color: #f0f0f0;
+    border-radius: 10px;
 }
 
 .dashboard-footer {
