--- a/public/stylesheet/defaultdashboard.css
+++ b/public/stylesheet/defaultdashboard.css
@@ -40,14 +40,94 @@ body .sub-body {
 
 .sub-body > .dashboard-sub-body {  /* FOR THE CONTAINER HOLDING VERTICAL NAVBAR & DASHBOARD CONTENT */
     display: flex;
+    position: relative;
     height: 100%;
 }
 
+
 /* Vertical Navbar styles */
 .dashboard-sub-body > .vertical-navbar {
-    width: 300px;
+    width: 260px;
+    position: absolute;
+    z-index: 16;
+    left: 0;
+    transition: left 0.5s ease;
     height: 100%;
     background-color: #f9f9f9;
+}
+
+.dashboard-content-title button {
+    display: none;        
+    width: 40px;
+    height: 35px;        
+    border-radius: 10px;
+    background: none;
+    color: #f9f9f99f;
+    margin: 0px 20px 0px 10px;
+    transition: all 0.2s ease;
+    border: none;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.4rem;
+    letter-spacing: 0.1px;
+    padding: 0px 10px;
+}
+
+.user-details .closeIcon {
+    display: none;        
+    position: absolute;
+    right: 0;
+    transform: translateX(-50%);
+    top: 10px;
+}
+.dashboard-content-title button:hover{
+    background: #f9f9f90e;
+}
+
+.user-details > .closeIcon:hover {
+    background:#2c3e5011;
+}
+
+@media (max-width: 768px) {
+    .dashboard-sub-body > .vertical-navbar {
+        left: -280px;
+    }
+    .vertical-navbar ~ .dashboard-content {
+        margin-left: 0;
+    }
+
+    .dashboard-content-title > a { /* go back or home text styling */
+        visibility: hidden;
+        opacity: 0;
+        position: absolute;
+    }
+
+    
+    .dashboard-content-title button {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .user-details > .closeIcon {
+        display: flex;
+        flex-direction: column;
+        width: 25px;
+        height: 25px;        
+        border-radius: 50%;
+        border: none;
+        color: #2c3e5073;
+        padding: 2px;
+        transition: all 0.2s ease;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.2rem;
+        cursor: pointer;
+    }
+
+}
+
+.dashboard-sub-body .active {
+    left: 0;
 }
 
 .vertical-navbar > .vertical-navbar-box {
@@ -55,10 +135,8 @@ body .sub-body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.1);
     position: relative;
     z-index: 1;
-
 }
 
 
@@ -131,8 +209,7 @@ body .sub-body {
     content: "";
     width: 100%;
     height: 100%;
-    background: var(--primary-color);
-
+    background: #2c3e502c;
 }
 
 .logout-button:hover { /* self-explanatory */
@@ -159,7 +236,6 @@ body .sub-body {
 }
 
 .dashboard-items { /* individual li tags with their shared class-name */
-    transition: color 0.1s ease-in, background 0.1s ease-in, transform 0.1s ease-in-out;
     cursor: pointer;
     width: 100%;
     display: flex;
@@ -168,6 +244,7 @@ body .sub-body {
     align-items: center;
     border-radius: 10px;
     padding: 5px 0px 0px 10px;
+    transition: color 0.1s ease-in, background 0.1s ease-in, transform 0.1s ease-in-out;
 }
 
 .dashboard-items > p {
@@ -238,6 +315,8 @@ body .sub-body {
 
 .dashboard-content { /* parent section element holding all the dashboard contents */
     width: 100%;
+    transition: margin 0.5s ease;
+    margin-left: 260px;
     height: 100%;
     background: #ffff;
     border-radius: 10px 0px 0px;
@@ -256,9 +335,10 @@ body .sub-body {
     padding: 10px;
     width: 100%;
     background: var(--primary-color);
-    color: #f9f9f9;
+    color: #f9f9f99f;
     box-shadow: 4px 2px 10px rgba(0, 0, 0, 0.219);
 }
+
 
 .dashboard-content-title h1 { /* selective styling for the h1 tag */
     letter-spacing: 2.5px;
@@ -270,6 +350,7 @@ body .sub-body {
 
 .go-back { /* go back or home text styling */
     display: flex;
+    transition: all 0.5s ease;
     margin-right: 10px;
 }
 
