--- a/public/stylesheet/overview.css
+++ b/public/stylesheet/overview.css
@@ -154,18 +154,16 @@ input[type="number"] {
 }
 
 .default-chart-width {
-    min-width: 300px;
     border-radius: 10px;
     width: 100%;
     position: relative;
     box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
-    height: 100%;
 }
 
 
 .number-chart{
     display: flex;
-    min-height: 150px;
+    height: 150px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -277,6 +275,7 @@ input[type="number"] {
     width: 8px;
     height: 8px;
     padding: 5px;
+    display: none;
 }
 
 /* .table-container::-webkit-scrollbar-button {
@@ -327,7 +326,7 @@ input[type="number"] {
 
 .grid-chart {
     display: grid;
-    grid-template-columns: repeat(auto, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
     grid-auto-rows: auto;
     column-gap: 20px;
     row-gap: 30px;
@@ -349,6 +348,27 @@ input[type="number"] {
 .grid-row-4-column-2-span-2,
 .grid-row-4-column-span-2 {
     grid-column: span 1;
+}
+
+@media (max-width: 600px) {
+    .grid-chart {
+        grid-template-columns: auto-fit (300px 1fr); /* Multi-column layout for larger screens */
+    }
+
+    .grid-span-col-2-3 {
+        grid-column: span 0;  
+        height: 350px;
+    }
+    
+    .grid-row-2-col-1 {
+        grid-column: span 0;
+    }
+    
+    .grid-row-4-column-2-span-2,
+    .grid-row-4-column-span-2 {
+        grid-column: span 0;
+    }
+    
 }
 
 @media (min-width: 768px) {
@@ -399,8 +419,13 @@ input[type="number"] {
         border-radius: 10px;
         box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
     }
+    .default-chart-width {
+        min-width: 300px;
+    }
+    .table-wrapper::-webkit-scrollbar {
+        display: block;
+    }
 }
-
 
 .dark-colour-style {
     background: #18264d;
