--- a/public/stylesheet/send-announcements.css
+++ b/public/stylesheet/send-announcements.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root {
     --primary-color: #2C3E50;     
     --secondary-color: #4A90E2;   
@@ -11,7 +13,7 @@
 
 .form-container {
     display: flex;
-    padding: 20px 60px;
+    background-color: #f9f9f9;
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: center;
@@ -19,11 +21,11 @@
 
 .form-group {
     display: flex;
-    flex-direction: column-reverse;
-    align-items: baseline;
-    justify-content: center;
+    flex-direction: column;
     flex: 1;
-    margin: 0px 0px 20px 0px;
+    position: relative;
+    color: #e7e7e7;
+    justify-content: center;
     font-family: 'arial' sans-serif;
 }
 
@@ -33,15 +35,15 @@
 
 .form-group input {
     display: block;
+    width: 100%;   
     height: 45px;
-    width: 450px;
     outline: none;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid var(--primary-color);
     font-size: 1rem;
     font-weight: 400;
-    box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.002);
+    /* box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.002); */
     letter-spacing: 0rem;
     transition: all .3s ease-out;
 }
@@ -62,8 +64,15 @@
     box-shadow: 1px 1px 20px var(--secondary-color);
 }
 
-.form-container textarea{
-    flex: 1;
+.form-group textarea{
+    border-radius: 5px;
+    letter-spacing: 0rem;
+    width: 100%;   
+    resize: none;
+    outline: none;
+    border-color: var(--secondary-color);
+    padding: 10px;
+    height: 100%;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
@@ -75,7 +84,7 @@ input[type="number"]::-webkit-inner-spin-button {
 input[type="number"] {
     appearance: none; 
 }
-
+/* 
 .form-group select {
     display: block;
     height: 45px;
@@ -88,12 +97,410 @@ input[type="number"] {
     font-weight: 400;
     box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.002);
     letter-spacing: 0rem;
-}
+} */
 
 .hidden {
     display: none;
 }
 
-* {
-    outline: 1px solid red;
+.messages {
+    /* margin: 0px 0px 0px 40px */
+    padding: 0px 60px;
+}
+
+.messages h3 {
+    font-size: 1.3rem;
+    text-wrap: nowrap;
+}
+
+.messages .scroll {
+    overflow: auto;
+    width: 100%;
+}
+
+.grid-messages {
+    display: grid;
+    text-align: left;
+    grid-template-rows: 1fr auto;
+    min-height: 75%;
+}
+
+.grid-messages .container {
+    height: 100%;
+    align-self: end;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 20px 60px;
+}
+
+button[title='compose'] {
+    /* position: absolute; */
+    /* right: 0; */
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(2, auto);
+    gap: 10px;
+    background: none;
+    /* fill: #f9f9f9; */
+    color: #202124;
+    /* color: #f9f9f9; */
+    font-size: 14px;
+    font-family: "Roboto";
+    background: var(--secondary-color);
+    border: none;
+    border-radius: 10px;
+    padding: 10px 24px 10px 10px;
+    cursor: pointer;
+    transition: 0.4s ease;
+}
+
+button[title='compose']:hover {
+    box-shadow: 1px 2px 9px rgba(0, 0, 0, 0.788);
+}
+
+.messageBody {
+    display: flex;
+    flex-direction: column;
+    /* gap: 10px; */
+}
+
+.message-prev {
+    display: flex;
+    background: #f2f5fc;
+    flex-direction: row;
+    position: relative;
+    gap: 20px;
+    color: #202124;
+    padding: 10px 5px;
+    max-height: 120px;
+    cursor: pointer;
+    /* margin-bottom: 10px; */
+    border-bottom: 0.2px solid #20212417;
+    text-overflow: ellipsis;
+    font-size: 14px;
+}
+
+.message-prev .left {
+    text-wrap: nowrap;
+}
+
+.message-prev .right {
+    /* position: relative; */
+    flex: 1;
+}
+
+.message-prev .right .wrapper {
+    display: flex;
+    align-items: baseline;
+    gap: 8px;
+}
+
+.message-prev .right .subject {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
+}
+
+.message-prev .right .content {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    color: #5F6368;
+    flex: 1;
+}
+
+.message-prev .actions {
+    position: absolute;
+    display: none;
+    right: 0;
+    top: 0;
+    background: #f9f9f9;
+    box-shadow: -2px 3px 7px #0000004b;
+    width: 15%;
+    border-radius: 0px 0px 0px 10px;
+    padding: 3px 5px;
+    /* display: flex; */
+    align-items: center;
+    /* margin: 8px 8px 0px 0px; */
+}
+
+.message-prev:hover{
+    /* box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.3); */
+    box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0, 0 1px 2px 0 rgba(60, 64, 67, .3), 0 1px 3px 1px rgba(60, 64, 67, .15);
+    z-index: 1;
+}
+
+.message-prev:hover .actions {
+    display: flex;
+}
+
+.message-prev .right .time {
+    font-size: 12px;
+    text-wrap: nowrap;
+}
+
+
+.modal {
+    position: absolute;
+    z-index: 20;
+    top: 0;
+    left: 0;
+    /* transform: translate(-50%); */
+    display: flex;
+    padding: 60px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
+
+}
+
+.modal > .container {
+	max-width: 991px;
+	width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+	background: #fff;
+    flex: 1;
+	border-radius: 8px;
+	overflow: hidden;
+}
+.modal > .container .toolbar {
+	/* background: #eee; */
+	padding: 0px 16px;
+    flex: 1;
+    position: relative;
+    gap: 20px;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.modal > .container > .head {
+    display: flex;
+    padding: 0px 16px;
+    flex-direction: column;
+}
+
+.modal > .container > .head input{
+    outline: none;
+    border: none;
+    line-height: 20px;
+    font-size: 14px;
+    border-bottom: 0.5px solid #4547462c;
+    padding: 10px 0px;
+
+}
+
+.modal > .container .foot .buttons {
+    display: flex;
+    gap: 5px;
+} 
+
+.modal > .container .foot .buttons button{
+    display: flex;
+    color: #454746;
+    cursor: pointer;
+    padding: 6px 16px;
+    border: none;
+    border-radius: 20px;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.modal > .container .actions {
+    display: flex;
+	padding: 16px;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    background: #f2f5fc;
+}
+
+
+.modal > .container .actions p {
+    font-size: 14px;
+    color: #041E49;
+}
+
+.modal > .container .actions button {
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border-radius: 2px;
+    background: none;
+}
+
+.modal > .container .actions button:hover {
+    background: #1d1d1d13;
+}
+
+.modal > .container .foot {
+	display: flex;
+	grid-gap: 10px;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 16px;
+}
+
+.modal > .container .foot .left {
+	flex-wrap: wrap;
+    display: flex;
+    gap: 10px;
+    padding: 8px 0px;
+}
+
+.modal > .container .foot .left > input {
+	max-width: 100px;
+	padding: 6px 10px;
+	border-radius: 6px;
+	border: 2px solid #ddd;
+	outline: none;
+}
+.modal > .container .foot .left select {
+	background: #fff;
+	border: 2px solid #ddd;
+	border-radius: 6px;
+	outline: none;
+	cursor: pointer;
+}
+.modal > .container .foot .left .color {
+	background: #fff;
+	border: 2px solid #ddd;
+	border-radius: 6px;
+	outline: none;
+	cursor: pointer;
+	display: flex;
+    
+	align-items: center;
+	grid-gap: 6px;
+	padding: 0 10px;
+}
+.modal > .container .foot .left .color span {
+	font-size: 14px;
+}
+.modal > .container .foot .left .color input {
+	border: none;
+	padding: 0;
+	width: 26px;
+	height: 26px;
+	background: #fff;
+	cursor: pointer;
+}
+.modal > .container .foot .left .color input::-moz-color-swatch {
+	width: 20px;
+	height: 20px;
+	border: none;
+	border-radius: 50%;
+}
+
+.modal > .container .foot .right button {
+    display: flex;
+    align-items: center;
+    color: #fff;
+    justify-content: center;
+    padding: 6px 16px;
+    border: none;
+    border-radius: 20px;
+    background: #0B57D0;
+    font-size: 14px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.modal > .container .btn-toolbar {
+	display: grid;
+    grid-template-columns: auto auto;
+	gap: 5px;
+}
+.modal > .container .btn-toolbar button {
+	border: 2px solid #ddd;
+	border-radius: 6px;
+	cursor: pointer;
+    position: relative;
+    background: none;
+    padding: 5px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 14px;
+}
+
+.modal > .container .foot .right button:hover {
+    z-index: 1;
+    box-shadow: 0px 1px 4px 1px rgba(0, 0, 0, 0.4);
+}
+.modal > .container .btn-toolbar button:hover {
+	background: #f3f3f3;
+}
+#content {
+	padding: 16px;
+	outline: none;
+    text-align: left;
+	max-height: 50vh;
+	overflow: auto;
+    flex: 1;
+    /* background: #fff; */
+}
+
+
+.upload {
+    position: absolute;
+    background: #f7f7f7;
+    padding: 8px 12px;
+    display: flex;
+    gap: 5px;
+    border-radius: 20px;
+    bottom: 0;
+    margin-right: 100px;
+    right: 0;
+    justify-content: space-between;
+    align-items: center;
+    width: 280px;
+}
+
+.upload p {
+    text-wrap: nowrap;
+    white-space: nowrap;
+    text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.upload img {
+    object-fit: cover;
+    border-radius: 50%;
+    display: flex;
+    width: 40px;
+    height: 40px;
+}
+
+button[title="removeImage"] {
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border-radius: 2px;
+    background: none;
+}
+
+button[title="removeImage"]:hover {
+    background: #1d1d1d13;
+}
+
+#show-code[data-active="true"] {
+	background: #eee;
 }
